eval/runs/semantic_search_in_postgres/future/16_hasura_contrib
=== INPUT ===
What are the 5 worst rated Tom Cruise movies that I haven't seen?

=== OUTPUT ===

=== QUERY PLAN ===
To answer this question, I would need to retrieve the Tom Cruise movies that the user hasn't seen, along with their ratings. 

```
query = """
  SELECT 
    m.title,
    m.id,
    AVG(r.rating) AS avg_rating
  FROM 
    public.movie m
  LEFT JOIN 
    public.movie_cm mc ON m.id = mc.film_id
  LEFT JOIN 
    public.castmember c ON mc.id = c.id
  LEFT JOIN 
    public.paymant p ON m.id = p.rental_id
  LEFT JOIN 
    public.patron pa ON p.customer_id = pa.id
  LEFT JOIN 
    (SELECT rental_id FROM public.paymant WHERE customer_id = <user_id>) AS seen ON m.id = seen.rental_id
  WHERE 
    c.given_name = 'Tom' AND c.surname = 'Cruise' AND seen.rental_id IS NULL
  GROUP BY 
    m.title, m.id
  ORDER BY 
    avg_rating ASC
  LIMIT 5
"""

data = executor.get_from_database(query.replace('<user_id>', '<actual_user_id>'))
if len(data) == 0:
  executor.output('No Tom Cruise movies found that you haven\'t seen')
else:
  executor.output('The 5 worst rated Tom Cruise movies that you haven\'t seen are:')
  for movie in data:
    executor.output(f'Title: {movie["title"]}, ID: {movie["id"]}, Average Rating: {movie["avg_rating"]}')
```
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 27, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/python_executor.py", line 34, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 119, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({
psycopg2.errors.SyntaxError: syntax error at or near "<"
LINE 16: ...rental_id FROM public.paymant WHERE customer_id = <actual_us...
                                                              ^


=== RETRY ===

=== QUERY PLAN ===
The error is due to the `<actual_user_id>` in the SQL query. This is not a valid SQL syntax. We need to replace it with the actual user ID. However, since we don't have the actual user ID, we can't hardcode it. We need to modify the script to accept the user ID as an input.

Here's the corrected script:

```
user_id = input("Enter your user ID: ")

query = """
  SELECT 
    m.title,
    m.id,
    AVG(r.rating) AS avg_rating
  FROM 
    public.movie m
  LEFT JOIN 
    public.movie_cm mc ON m.id = mc.film_id
  LEFT JOIN 
    public.castmember c ON mc.id = c.id
  LEFT JOIN 
    public.paymant p ON m.id = p.rental_id
  LEFT JOIN 
    public.patron pa ON p.customer_id = pa.id
  LEFT JOIN 
    (SELECT rental_id FROM public.paymant WHERE customer_id = %s) AS seen ON m.id = seen.rental_id
  WHERE 
    c.given_name = 'Tom' AND c.surname = 'Cruise' AND seen.rental_id IS NULL
  GROUP BY 
    m.title, m.id
  ORDER BY 
    avg_rating ASC
  LIMIT 5
"""

data = executor.get_from_database(query, (user_id,))
if len(data) == 0:
  executor.output('No Tom Cruise movies found that you haven\'t seen')
else:
  executor.output('The 5 worst rated Tom Cruise movies that you haven\'t seen are:')
  for movie in data:
    executor.output(f'Title: {movie["title"]}, ID: {movie["id"]}, Average Rating: {movie["avg_rating"]}')
```

This script will prompt the user to enter their user ID, and then use that ID in the SQL query.
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 29, in <module>
TypeError: PythonExecutor.get_from_database() takes 2 positional arguments but 3 were given

=== RETRY ===

=== QUERY PLAN ===
The error is due to the way we're calling the `get_from_database` method. It expects only one argument, which is the SQL query. However, we're passing two arguments: the query and the user ID.

Since we can't pass the user ID as a separate argument, we need to include it in the query string. Here's the corrected script:

```
user_id = input("Enter your user ID: ")

query = """
  SELECT 
    m.title,
    m.id,
    AVG(r.rating) AS avg_rating
  FROM 
    public.movie m
  LEFT JOIN 
    public.movie_cm mc ON m.id = mc.film_id
  LEFT JOIN 
    public.castmember c ON mc.id = c.id
  LEFT JOIN 
    public.paymant p ON m.id = p.rental_id
  LEFT JOIN 
    public.patron pa ON p.customer_id = pa.id
  LEFT JOIN 
    (SELECT rental_id FROM public.paymant WHERE customer_id = %s) AS seen ON m.id = seen.rental_id
  WHERE 
    c.given_name = 'Tom' AND c.surname = 'Cruise' AND seen.rental_id IS NULL
  GROUP BY 
    m.title, m.id
  ORDER BY 
    avg_rating ASC
  LIMIT 5
""" % user_id

data = executor.get_from_database(query)
if len(data) == 0:
  executor.output('No Tom Cruise movies found that you haven\'t seen')
else:
  executor.output('The 5 worst rated Tom Cruise movies that you haven\'t seen are:')
  for movie in data:
    executor.output(f'Title: {movie["title"]}, ID: {movie["id"]}, Average Rating: {movie["avg_rating"]}')
```

In this script, we're using string formatting to include the user ID in the query string.
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 29, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/python_executor.py", line 34, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 119, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({
psycopg2.errors.UndefinedTable: missing FROM-clause entry for table "r"
LINE 4:     AVG(r.rating) AS avg_rating
                ^


=== RETRY ===

=== QUERY PLAN ===
The error is due to the fact that we're trying to access the `rating` column from a table `r`, but we haven't defined any table `r` in our query. 

It seems like we're trying to get the average rating of the movies, but we don't have a table that stores the ratings in our database schema. 

If we had a `rating` table, we would need to join it with the `movie` table to get the average rating. But since we don't have that table, we can't get the average rating.

Here's the corrected script:

```
user_id = input("Enter your user ID: ")

query = """
  SELECT 
    m.title,
    m.id
  FROM 
    public.movie m
  LEFT JOIN 
    public.movie_cm mc ON m.id = mc.film_id
  LEFT JOIN 
    public.castmember c ON mc.id = c.id
  LEFT JOIN 
    public.paymant p ON m.id = p.rental_id
  LEFT JOIN 
    public.patron pa ON p.customer_id = pa.id
  LEFT JOIN 
    (SELECT rental_id FROM public.paymant WHERE customer_id = %s) AS seen ON m.id = seen.rental_id
  WHERE 
    c.given_name = 'Tom' AND c.surname = 'Cruise' AND seen.rental_id IS NULL
  GROUP BY 
    m.title, m.id
  LIMIT 5
""" % user_id

data = executor.get_from_database(query)
if len(data) == 0:
  executor.output('No Tom Cruise movies found that you haven\'t seen')
else:
  executor.output('The 5 Tom Cruise movies that you haven\'t seen are:')
  for movie in data:
    executor.output(f'Title: {movie["title"]}, ID: {movie["id"]}')
```

This script will return the 5 Tom Cruise movies that the user hasn't seen, without considering the ratings.
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 26, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/python_executor.py", line 34, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 119, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({
psycopg2.errors.UndefinedColumn: column "lakm" does not exist
LINE 15: ...rental_id FROM public.paymant WHERE customer_id = lakm) AS s...
                                                              ^

